# Raycasting

./: .clang-format  .gitignore  CMakeLists.txt  README.md  RayCasting.html  RayCasting.js  RayCasting.wasm  main.c  main.cpp  raycasting.cbp  raycasting.depend  raycasting.layout
.github/workflows/: deploy.yml
public/: index.html
src/: colors.c  main.c  primitives.c
